Fix clipping/scroll on input text
This is caused by normalize.css applying a line-height of 1.15, setting
this to normal fixes the issue. https://github.com/necolas/normalize.css/issues/778

--- a/src/style.css
+++ b/src/style.css
@@ -270,6 +270,7 @@ html {
   padding: var(--spacing-small);
   transition: box-shadow var(--default-transition);
   appearance: none;
+  line-height: normal;
 }
 
 .form__input-text:focus {
